# csv-agent

./: .gitignore  Dockerfile  pyproject.toml
csv_agent/: app.py
data/: pred-app-mef-dhup-treated.csv  pred-app12-mef-dhup-treated.csv  pred-app3-mef-dhup-treated.csv  pred-mai-mef-dhup-treated.csv
sql_agent/: app.py
