[project]
name = "csv-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Baha-Arfaoui",email = "baha.arfaoui01@gmail.com"}
]
readme = "README.md"
requires-python = "3.11.11"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain (>=0.3.19,<0.4.0)",
    "langchain-community (>=0.3.18,<0.4.0)",
    "langchain-openai (>=0.3.7,<0.4.0)",
    "langgraph (>=0.2.74,<0.3.0)",
    "streamlit (>=1.42.2,<2.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "matplotlib (>=3.10.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
